--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Interview Prep AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
     <style>
       /* Custom scrollbar for webkit */
       ::-webkit-scrollbar {
@@ -31,6 +30,12 @@
       .no-scrollbar {
         -ms-overflow-style: none;
         scrollbar-width: none;
+      }
+      
+      /* Handwriting Canvas Styles */
+      .drawing-canvas {
+        touch-action: none;
+        cursor: crosshair;
       }
     </style>
   <script type="importmap">
